--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,6 +1,6 @@
 .cart-dropdown {
   position: absolute;
-  width: 240px;
+  width: 250px;
   height: 340px;
   display: flex;
   flex-direction: column;
@@ -15,6 +15,7 @@
     height: 240px;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
   }
 
   button {
