--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,8 +1,8 @@
 .checkout-item {
   width: 100%;
   display: flex;
-  min-height: 100opx;
-  border-bottom: 1px soli darkgray;
+  min-height: 100px;
+  border-bottom: 1px solid darkgray;
   padding: 15px 0;
   font-size: 20px;
   align-items: center;
@@ -25,7 +25,6 @@
 
   .quantity {
     display: flex;
-    padding-left: 20px;
 
     .arrow {
       cursor: pointer;
